# mHC.cu

./: CMakeLists.txt  Makefile  Makefile.hip  README.md  README_HIP.md  setup_hip.py
csrc/benchmarks/: bench_fused_rmsnorm_matmul_backward.cu  bench_mhc_layer.cu  bench_rmsnorm.cu  bench_sinkhorn_knopp.cu  bench_sinkhorn_knopp_backward.cu
docs/: AITER_INTEGRATION.md  BENCHMARK_RESULTS.md  FUSED_OPS_RESULTS.md  mhc_aiter_benchmark_results.json
scripts/: benchmark_aiter.py  benchmark_full_aiter.py  benchmark_fused_ops.py  build_hip.sh  test_aiter_direct.py  verify_accuracy.py
src/csrc/: CMakeLists_hip.txt
src/csrc/include/: aiter_compat.h  mhc_types_hip.h  utils.cuh  utils_hip.h
src/csrc/kernels/: fused_rmsnorm_matmul_hip.h  mhc_layer.cuh  mhc_layer_hip.h  rmsnorm_hip.h  sinkhorn_knopp_hip.h  stream_ops_hip.h
src/python/: __init__.py  aiter_ops.py  bindings.cu  bindings_hip.cpp  bindings_hip.cu  mhc_aiter.py  mhc_benchmark.py  mhc_vllm_integration.py
src/python/benchmarks/: bench_layer.py
src/python/mhc/: ops.py
src/python/tests/: test_layer.py
